--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -1,80 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{823EA980-0DE9-4A92-A001-C9179833127B}</ProjectGuid>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Examples</RootNamespace>
-    <AssemblyName>Examples</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\SharpKml\SharpKml.Core.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="BalloonFeatures.cs" />
-    <Compile Include="Change.cs" />
-    <Compile Include="Clone.cs" />
-    <Compile Include="CreateKmz.cs" />
-    <Compile Include="CreateIconStyle.cs" />
-    <Compile Include="ExtendKml.cs" />
-    <Compile Include="InlineStyles.cs" />
-    <Compile Include="ShowStyles.cs" />
-    <Compile Include="SortPlacemarks.cs" />
-    <Compile Include="CreateKml.cs" />
-    <Compile Include="ParseKml.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="SplitStyles.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SharpKml\SharpKml.Core.csproj">
-      <Project>{ba1c2e65-51f6-4960-bd72-26e3b95d38d6}</Project>
-      <Name>SharpKml.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Data\camera_mode.png" />
-    <EmbeddedResource Include="Data\zermatt.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Data\doc.kml" />
-    <EmbeddedResource Include="Data\Sample.kml" />
-  </ItemGroup>
+
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
+  <ItemGroup>
+    <EmbeddedResource Include="Data\camera_mode.png" />
+    <EmbeddedResource Include="Data\doc.kml" />
+    <EmbeddedResource Include="Data\Sample.kml" />
+    <EmbeddedResource Include="Data\zermatt.jpg" />
+  </ItemGroup>
 </Project>
